deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  #стратегии обновления:
  #rollingUpdate - бесшовные обновления (приложение не останавливается и обновляется в рантайме)
  #recreate - полностью останавливаем приложение, накатываем обновление и поднимаем
  strategy:
    rollingUpdate:
      #максимальное число, на которое можно увеличить количество реплик при обновлении
      maxSurge: 1
      #максимальное число недоступных подов при обновлении
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx:1.24
          name: nginx
          ports:
            - containerPort: 80
